<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/LocationName"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:ellipsize="end"
                    android:text="@string/full_name" />

                <TextView
                    android:id="@+id/LocationAddress"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:textSize="14sp"
                    android:text="@string/address01" />

            </LinearLayout>

            <TextView
                android:id="@+id/DateTime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:textAlignment="textEnd"
                android:text="@string/datetime"
                tools:ignore="RtlCompat" />

        </LinearLayout>

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>