<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            app:elevation="0dp">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:elevation="0dp"
                app:popupTheme="@style/AppTheme.PopupOverlay" />

        </com.google.android.material.appbar.AppBarLayout>

        <TextView
            android:id="@+id/WelcomeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:textAllCaps="true"
            android:textSize="32sp"
            android:layout_below="@id/appbar"
            android:text="@string/welcome" />

        <TextView
            android:id="@+id/LoginText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/WelcomeText"
            android:layout_marginTop="10dp"
            android:layout_centerHorizontal="true"
            android:textAllCaps="true"
            android:textSize="32sp"
            android:text="@string/sign_up" />

        <LinearLayout
            android:id="@+id/FirstNameLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/LoginText"
            android:orientation="horizontal">

            <TextView

                android:id="@+id/FirstName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/firstname" />

            <EditText
                android:id="@+id/FirstNameField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:layout_marginStart="10dp"
                android:hint="@string/firstname"
                android:text="" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/LastNameLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/FirstNameLayout"
            android:orientation="horizontal">

            <TextView

                android:id="@+id/LastName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/lastname" />

            <EditText
                android:id="@+id/LastNameField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:layout_marginStart="10dp"
                android:hint="@string/lastname"
                android:text="" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/EmailLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/LastNameLayout"
            android:orientation="horizontal">

            <TextView

                android:id="@+id/Email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/email" />

            <EditText
                android:id="@+id/EmailField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:layout_marginStart="10dp"
                android:hint="@string/email"
                android:text="" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/PasswordLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_below="@id/EmailLayout">

            <TextView
                android:id="@+id/Password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/password" />

            <EditText
                android:id="@+id/PasswordField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword"
                android:layout_marginStart="10dp"
                android:hint="@string/password"
                android:text="" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ConfirmPasswordLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_below="@id/PasswordLayout">

            <TextView
                android:id="@+id/ConfirmPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/confirm_password" />

            <EditText
                android:id="@+id/ConfirmPasswordField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword"
                android:layout_marginStart="10dp"
                android:hint="@string/confirm_password"
                android:text="" />
        </LinearLayout>

        <Button
            android:id="@+id/ButtonSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ConfirmPasswordLayout"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:textAllCaps="true"
            android:text="@string/sign_up" />
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>