<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            app:elevation="0dp">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:elevation="0dp"
                app:popupTheme="@style/AppTheme.PopupOverlay" />
        </com.google.android.material.appbar.AppBarLayout>

        <ScrollView
            android:layout_below="@id/appbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/UserImage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    tools:srcCompat="@tools:sample/avatars" />

                <LinearLayout
                    android:id="@+id/FirstNameLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="20dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/FirstName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/firstname"
                        android:textSize="20sp" />

                    <EditText
                        android:id="@+id/FirstNameField"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:ems="10"
                        android:hint="@string/firstname"
                        android:importantForAutofill="no"
                        android:inputType="textPersonName"
                        />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/LastNameLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="20dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/LastName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lastname"
                        android:textSize="20sp" />

                    <EditText
                        android:id="@+id/LastNameField"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:ems="10"
                        android:hint="@string/lastname"
                        android:importantForAutofill="no"
                        android:inputType="textPersonName"
                        android:text="" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/BirthdayLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="20dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/Birthday"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/birthday"
                        android:textSize="20sp" />

                    <EditText
                        android:id="@+id/BirthdayField"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:ems="10"
                        android:hint="@string/birthday"
                        android:importantForAutofill="no"
                        android:inputType="textPersonName"
                        android:text="" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/EmailLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="20dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/EmailAddressText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/email"
                        android:textSize="20sp" />

                    <EditText
                        android:id="@+id/EmailField"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:ems="10"
                        android:hint="@string/email"
                        android:importantForAutofill="no"
                        android:inputType="textEmailAddress"
                        android:text="" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/PhoneLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="20dp"
                    android:orientation="horizontal">

                    <TextView

                        android:id="@+id/PhoneText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/phoneNo"
                        android:textSize="20sp" />

                    <EditText
                        android:id="@+id/PhoneField"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:ems="10"
                        android:hint="@string/phoneNo"
                        android:importantForAutofill="no"
                        android:inputType="textPhonetic"
                        android:text="" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/Address01Layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="20dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/Address01Text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/address01"
                        android:textSize="20sp" />

                    <EditText
                        android:id="@+id/Address01Field"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:ems="10"
                        android:hint="@string/address01"
                        android:importantForAutofill="no"
                        android:inputType="text"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/Address02Layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="20dp"
                    android:orientation="horizontal">

                    <TextView

                        android:id="@+id/Address02Text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/address02"
                        android:textSize="20sp" />

                    <EditText
                        android:id="@+id/Address02Field"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:ems="10"
                        android:hint="@string/address02"
                        android:importantForAutofill="no"
                        android:inputType="text"
                        android:text="" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/CityLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="20dp"
                    android:orientation="horizontal">

                    <TextView

                        android:id="@+id/CityText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/city"
                        android:textSize="20sp" />

                    <EditText
                        android:id="@+id/CityField"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:ems="10"
                        android:hint="@string/city"
                        android:importantForAutofill="no"
                        android:inputType="text"
                        android:text="" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/StateLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="20dp"
                    android:orientation="horizontal">

                    <TextView

                        android:id="@+id/StateText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/state"
                        android:textSize="20sp" />

                    <EditText
                        android:id="@+id/StateField"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:ems="10"
                        android:hint="@string/state"
                        android:importantForAutofill="no"
                        android:inputType="text"
                        android:text="" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/PostCodeLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="20dp"
                    android:orientation="horizontal">

                    <TextView

                        android:id="@+id/PostCodeText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/postcode"
                        android:textSize="20sp" />

                    <EditText
                        android:id="@+id/PostCodeField"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:ems="10"
                        android:hint="@string/postcode"
                        android:importantForAutofill="no"
                        android:inputType="text"
                        android:text="" />
                </LinearLayout>

                <Button
                    android:id="@+id/ButtonSave"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:text="@string/accept"/>
            </LinearLayout>
        </ScrollView>


    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>